deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: default
  labels:
    app: echo

spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%

  selector:
    matchLabels:
      toto: tutu
  template:
    metadata:
      labels:
        toto: tutu
    spec:

      containers:
        - name: echo
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 60m
              memory: 50Mi
            limits:
              cpu: 60m
              memory: 50Mi
