service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    toto: tutu
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
