ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    -  host: kubernetes.site.internal
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: echo-service
                 port:
                   number: 3000
